app/styles/main.scss
$icon-font-path: '../fonts/';

// bower:scss
@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
// endbower

@import "icomoon";

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  font-size: 16px;
  line-height: 1.6;
  color: #282828;
}

h1, h2, h3 {
  font-weight: 200;
}

p {
  font-weight: 200;
}

div {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.site-header {
  border-top: 5px solid #e6be00;
  color: #f6f6f6;
  padding: 150px 0;

  background: #f6f6f6 url("../images/nodeschool-costarica.jpg") left center;
  background-size: cover;

  h1 > a {
    color: #f6f6f6;
  }

  h1 > a:hover {
    color: #f6f6f6;
    text-decoration: none;
  }


  @media screen and (min-width: $screen-sm-min) {
    padding-top:    ($jumbotron-padding * 5);
    padding-bottom: ($jumbotron-padding * 5);

    h1,
    .h1 {
      font-size: $jumbotron-heading-font-size;
    }
  }
}

.countdown {
  span {
    font-weight: bold;
  }
  font-size: 21px;
  text-align: center;
  margin-bottom: 30px;
}

.who-are-we {
  margin: 0 auto;
  border: 3px solid #ffffff;
  border-radius: 6px;

  @media screen and (min-width: $screen-sm-min) {
    width: 65%;
  }
}

.what-we-do {
  margin: 20px 0 30px;
  padding: 30px 0;

  @media screen and (min-width: $screen-sm-min) {
    margin: 40px 0 50px;
    padding: 50px 0;
  }
}

.what-we-do > div[class^="col-md-"] {

  @media screen and (max-width: $screen-sm-min) {
    margin-bottom: 65px;
  }
}

.what-is-nodeSchool {
  @extend .what-we-do;
}

.nodeSchool-day {
  @extend .what-we-do;
}

.workshops {
  @extend .what-we-do;
  padding-bottom: 0px;
}

.questions {
  background-color: #e6be00;
  color: #f6f6f6;
  margin: 30px 0 0;
  padding: 30px 0;

  a {
    color: #ffffff;
    text-decoration: underline;
  }

  @media screen and (min-width: $screen-sm-min) {
    margin: 50px 0 0;
    padding: 50px 0;
  }
}

.site-footer {
  background-color: #127373;
  color: white;

  padding: 30px 0;

  a {
    color: #f6f6f6;
    text-decoration: underline;
  }

  @media screen and (min-width: $screen-sm-min) {

    padding: 50px 0;
  }
}

// ====  helpers
/* Paragraph & Typographic */
p {
    line-height: 28px;
    margin-bottom: 25px;
}

.centered {
    text-align: center;
}

.paragraph-lead {
    font-size: 20px;
    color: #3498db;
}

strong {
    font-weight: 700;
}

em {
    font-weight: 300;
}

pre {
    background: #ebebeb;
    border: none;
    font-family: "Monaco";
    font-size: 16px;
    color: #666;
    padding: 20px;
    line-height: 28px;
}

small {
    font-size: 12px;
}

blockquote,
blockquote p {
    line-height: 28px;
    color: #999;
    font-weight: 300;
    font-style: italic;
}

blockquote {
    position: relative;
    margin: 0 0 40px -30px;
    padding-left: 30px;
    border-left: 5px solid #3498db;
}

blockquote cite {
    position: absolute;
    bottom: -25px;
    right: 0;
    font-size: 12px;
    font-style: italic;
    color: #333;
    font-weight: 300;
}

blockquote cite:before {
    content: "-- "
}

.event-box{
  border: 1px solid #CCC;
  border-radius: 20px;
  min-height: 100px;
  line-height: 25px;
  padding-top: 25px;
  margin-top: 25px;
}

#imagen-costa-rica{
  background: #f6f6f6 url("../images/san-jose-costa-rica-at-sunrise.jpg") center center;
  min-height: 300px;
  background-size: cover;
}

#mentors-container{
  >div{
    min-height:250px;
  }
}

